<resources>
    <string name="app_name">PlantAPP</string>
    <string name="plants">    Plants</string>
    <string name="contact_us">Contact us</string>
    <string name="home">Home</string>
    <string name ="profile">Profile</string>
    <string name="openNavView">Navigation view open</string>
    <string name="closeNavView">Navigation view close</string>
    <string name="nothing"> </string>
    <string name="botanicappgarden">BotanicAppGarden</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="log_out">Log out</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
</resources>
