<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:id="@+id/navViewLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navigation_header_container"
        android:layout_width="300dp"
        android:layout_height="?android:actionBarSize"
        android:background="@color/topNavView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:background="#00FFFFFF"
            android:src="@drawable/ic_bars_solid"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.appcompat.widget.AppCompatImageButton>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nav_view_btns"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigation_header_container">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_prophile_photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/profile"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="username.username"
            app:layout_constraintLeft_toRightOf="@+id/image_prophile_photo"
            tools:layout_editor_absoluteY="16dp"></com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="mail@mail.com"
            tools:layout_editor_absoluteX="72dp"
            tools:layout_editor_absoluteY="31dp"></com.google.android.material.textview.MaterialTextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/nav_view_menu"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nav_view_btns">


        <com.google.android.material.chip.Chip
            android:id="@+id/btn_plants"
            android:layout_width="200dp"
            android:layout_height="?android:actionBarSize"
            android:layout_marginStart="50dp"
            android:fontFamily="@font/salsa"
            android:text="@string/plants"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/text_topnavView"
            app:chipBackgroundColor="@color/back_topNavView"
            app:chipIcon="@drawable/ic_seedling_solid"
            app:chipIconSize="13dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/btn_contact"
            android:layout_width="200dp"
            android:layout_height="?android:actionBarSize"
            android:layout_marginStart="50dp"
            android:text="@string/contact_us"
            android:textColor="@color/text_topnavView"
            app:chipBackgroundColor="@color/back_topNavView"
            app:chipIcon="@drawable/ic_envelope_solid"
            app:chipIconSize="13dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/btn_home"
            android:layout_width="200dp"
            android:layout_height="?android:actionBarSize"
            android:layout_marginStart="50dp"
            android:text="@string/home"
            android:textColor="@color/text_topnavView"
            app:chipBackgroundColor="@color/back_topNavView"
            app:chipIcon="@drawable/ic_home_solid"
            app:chipIconSize="13dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/logo_botanicApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/botanicappgarden"
        android:textAlignment="center"
        android:textColor="@color/topNavView"
        app:layout_constraintBottom_toBottomOf="@id/navViewLayout"
        app:layout_constraintTop_toBottomOf="@+id/nav_view_menu" />

    <com.google.android.material.chip.Chip
        android:id="@+id/btn_log_out"
        android:layout_width="200dp"
        android:layout_height="?android:actionBarSize"
        android:text="@string/log_out"
        android:textColor="@color/text_topnavView"
        app:chipBackgroundColor="@color/back_topNavView"
        app:chipIcon="@drawable/ic_logout_black_24dp"
        app:chipIconSize="14dp"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="274dp" />

</androidx.constraintlayout.widget.ConstraintLayout>



